# CommonCore

./: Makefile  README.md  push_op.c  reverse_op.c  rotate_op.c  sorting.c  utils.c
born2beroot/: README.md  script_born.txt
corr/: ft_alembic_0.py  ft_alembic_2.py  ft_alembic_3.py  ft_distillation_0.py  ft_kaboom_0.py  ft_kaboom_1.py
corr/alchemy/: __init__.py  potions.py
ft_printf/: Makefile  a.out  ft_len_int.c  ft_len_nbr.c  ft_print_char.c  ft_print_chars.c  ft_print_hex.c  ft_print_int.c  ft_print_nbr.c  ft_print_ptr.c  ft_print_str.c  ft_print_uint.c  ft_printf.c  ft_printf.h  ft_putnbr_base.c  ft_putnbr_uint_fd.c  test.c  utils_len.c
ft_printf/libft/: Makefile  README.md  ft_isalnum.c  ft_isascii.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstadd_front_bonus.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstnew.c  ft_lstsize.c  ft_memcmp.c  ft_memcpy.c  ft_putnbr_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_strlcpy.c  ft_strmapi.c  libft.h
ft_printf_new/: Makefile  a.out  ft_print_hex.c  ft_print_nbr.c  ft_print_ptr.c  ft_printf.c
get_next_line/: file_da_leggere  get_next_line.c  get_next_line.h  get_next_line_utils.c  main.c  prova1  prova2
gnl_new/: a.out  get_next_line.c  get_next_line.h  get_next_line_bonus.c  get_next_line_bonus.h  get_next_line_utils.c  get_next_line_utils_bonus.c  main.c  prova_stabile.c  test.txt
libft/: ft_bzero.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstlast.c  ft_lstmap.c  ft_lstsize.c  ft_memchr.c  ft_strnstr.c  ft_substr.c
push_swap/: Makefile  README.md  a.out  cost_chunk.c  error.c  helper.c  main.c  norm.c  parse_input.c  parsing.c  print_stack.c  push_a.c  push_b.c  push_op.c  push_swap  push_swap.h  reverse_op.c  rotate_op.c  sort_big.c  sort_small.c  sorting.c  swap_op.c  utils.c
py_00/: main.py
py_04/: new_discovery.txt
py_05/: quack.py
py_06/: elements.py  ft_alembic_0.py  ft_alembic_1.py  ft_alembic_2.py  ft_alembic_3.py  ft_alembic_4.py  ft_distillation_1.py  ft_kaboom_0.py  ft_kaboom_1.py  ft_transmutation_0.py  ft_transmutation_1.py
py_07/: __init__.py  battle.py  capacitor.py  tournament.py
py_08/: construct.py
py_08/ex1/: loading.py  pyproject.toml  requirements.txt
vecchio/: push_swap.h  sort_big.c  swap_op.c  utils.c
vecchio_vecchio/: push_swap.h
(+133 files in other folders)
