# Poetry is a comprehensive tool for dependency management, packaging, 
# and publishing that replaces multiple legacy tools like pip, virtualenv, 
# and requirements.txt

[project]
name = "my-package"
version = ""
dynamic = ["version"]


dependencies = [
    "pandas==2.1.0",
    "numpy==1.21.0",
    "requests==2.31.0",
    "matplotlib==3.7.2"
]