# Poetry is a comprehensive tool for dependency management, packaging, 
# and publishing that replaces multiple legacy tools like pip, virtualenv, 
# and requirements.txt

[tool.poetry]  # sezione di configurazione principale del progetto
name = "matrix"  # nome del pacchetto. Viene usato se pubblichi il progetto su PyPI
version = "0.1.0"
description = "Matrix data analysis"
authors = ["elguiduc"]
package-mode = false

# dipendenze necessarie per far girare il programma
[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.0.0"
pandas = "^2.2.2"
matplotlib = "^3.7.0"
requests = "^2.31.0"

# Dipendenze installate solo in sviluppo, non in produzione.
# Non vengono incluse se qualcun altro installa il tuo pacchetto come libreria
[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
mypy = "^1.4.0"

# Dice a Python come costruire il pacchetto se lo vuoi distribuire.
[build-system]
requires = ["poetry-core"]  # Lo strumento necessario per il build (il motore interno di Poetry).
build-backend = "poetry.core.masonry.api"  # L'API standard PEP 517 che pip usa per costruire il pacchetto.

# Definisce dei comandi da terminale che vengono creati all'installazione.
[tool.poetry.scripts]
loading = "loading:main"  # Crea un comando loading che esegue la funzione main() nel file loading.py. 
# Dopo poetry install puoi quindi scrivere semplicemente poetry run loading
# invece di poetry run python loading.py.